sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:7: error: '}' expected but 'case' found.
    case = 0;
    ^AlgSelectionSort:12: error: '}' expected but 'case' found.
        case = j;
        ^AlgSelectionSort:15: error: ';' expected but identifier found.
    echange(i,j);
    ^AlgSelectionSort:17: error: eof expected but '}' found.
} 
^